<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/shad"
    tools:context=".TenthActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:text="@string/mi" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="22dp"
        android:text="@string/si" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:text="@string/sn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtsm"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="46dp"
        android:text="@string/am" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="16dp"
        android:text="@string/pn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="22dp"
        android:text="@string/ml" />

    <EditText
        android:id="@+id/txtsan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/btnsup"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tan" />

    <EditText
        android:id="@+id/txtsmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignLeft="@+id/txtsan"
        android:layout_alignRight="@+id/txtsan"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tmi" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/txtsmi"
        android:layout_alignRight="@+id/txtsmi"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tsi" />

    <EditText
        android:id="@+id/txtsn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtssi"
        android:layout_alignRight="@+id/txtssi"
        android:layout_below="@+id/txtssi"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tnam" />

    <EditText
        android:id="@+id/txtspn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignLeft="@+id/txtsn"
        android:layout_alignRight="@+id/txtsn"
        android:layout_below="@+id/txtsn"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tpn" />

    <EditText
        android:id="@+id/txtsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/txtspn"
        android:layout_alignRight="@+id/txtspn"
        android:layout_below="@+id/txtspn"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tml" />

    <Button
        android:id="@+id/btnsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnsvw"
        android:layout_alignBottom="@+id/btnsvw"
        android:layout_toRightOf="@+id/btnsvw"
        android:text="@string/bv" />

    <Button
        android:id="@+id/btnsad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/btnsdel"
        android:text="@string/bad" />

    <Button
        android:id="@+id/btnsclr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnsup"
        android:layout_alignBottom="@+id/btnsup"
        android:layout_alignLeft="@+id/btnsad"
        android:text="@string/bc" />

    <Button
        android:id="@+id/btnsdel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnsclr"
        android:layout_alignBottom="@+id/btnsclr"
        android:layout_alignRight="@+id/textView2"
        android:text="@string/bd" />

    <Button
        android:id="@+id/btnsup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnsv"
        android:layout_toRightOf="@+id/btnsvw"
        android:text="@string/bup" />

    <Button
        android:id="@+id/btnsvw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnsdel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="37dp"
        android:text="@string/bvl" />

    <TextView
        android:id="@+id/txtsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/scm" />

</RelativeLayout>
