<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/thhh"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NinethActivity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="35dp"
        android:text="@string/wname" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="34dp"
        android:text="@string/mcno" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="41dp"
        android:text="@string/tow" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="42dp"
        android:text="@string/wt" />

    <EditText
        android:id="@+id/txtmname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/txtmid"
        android:layout_alignRight="@+id/txtmid"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mwn" />

    <EditText
        android:id="@+id/txtmcno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/txtmname"
        android:layout_alignRight="@+id/txtmname"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mno" />

    <Button
        android:id="@+id/btnmadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnmview"
        android:layout_alignLeft="@+id/textView6"
        android:text="@string/ma" />

    <Button
        android:id="@+id/btnmview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnmadd"
        android:layout_alignParentBottom="true"
        android:text="@string/mv" />

    <Spinner
        android:id="@+id/SpinWorkTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnmdel"
        android:layout_alignRight="@+id/txtmcno"
        android:layout_toRightOf="@+id/btnmup" />

    <Button
        android:id="@+id/btnmclr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnmview"
        android:layout_alignBottom="@+id/btnmview"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/mc" />

    <Button
        android:id="@+id/btnmva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnmclr"
        android:layout_alignBottom="@+id/btnmclr"
        android:layout_toRightOf="@+id/btnmclr"
        android:text="@string/mva" />

    <Button
        android:id="@+id/btnmdel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnmva"
        android:layout_toRightOf="@+id/btnmup"
        android:text="@string/mdel" />

    <Button
        android:id="@+id/btnmup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnmclr"
        android:layout_toLeftOf="@+id/btnmva"
        android:text="@string/mu" />

    <EditText
        android:id="@+id/txtmid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/SpinTypeWork"
        android:layout_marginRight="14dp"
        android:layout_toRightOf="@+id/btnmup"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mid" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/SpinTypeWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/btnmdel" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnmdel"
        android:layout_marginTop="31dp"
        android:text="@string/mmd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/btnmup"
        android:text="@string/wid" />

</RelativeLayout>