<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EigthActivity" 
    android:background="@drawable/vp"
    >

    <EditText
        android:id="@+id/txteid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/btnev"
        android:ems="10"
        android:inputType="text"
        android:text="@string/eid" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/textView6"
        android:text="@string/eed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/btnev"
        android:text="@string/eename" />

    <Button
        android:id="@+id/btnemod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/btnesub"
        android:text="@string/em" />

    <Button
        android:id="@+id/btnev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnemod"
        android:layout_alignBottom="@+id/btnemod"
        android:layout_centerHorizontal="true"
        android:text="@string/v" />

    <Button
        android:id="@+id/btnevall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnev"
        android:layout_alignBottom="@+id/btnev"
        android:layout_alignLeft="@+id/txteinv"
        android:text="@string/eva" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnemod"
        android:layout_below="@+id/txtsm"
        android:layout_marginTop="38dp"
        android:text="@string/ecpn" />

    <Button
        android:id="@+id/btnechk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnesub"
        android:layout_alignBottom="@+id/btnesub"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/btnesub"
        android:text="@string/chk" 
        android:onClick="Click"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/txtename"
        android:layout_marginTop="22dp"
        android:text="@string/edd" />

    <Button
        android:id="@+id/btnesub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="47dp"
        android:text="@string/esub" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:text="@string/ep"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="21dp"
        android:text="@string/et" />

    <EditText
        android:id="@+id/txteinv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/txtename"
        android:ems="10"
        android:inputType="text"
        android:text="@string/edinv" />

    <EditText
        android:id="@+id/txtename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/txteid"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ename" />

    <EditText
        android:id="@+id/edtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txteinv"
        android:layout_alignLeft="@+id/txteinv"
        android:ems="10"
        android:inputType="time" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/edtTime"
        android:ems="10"
        android:inputType="date" />

</RelativeLayout>