<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SixthActivity"
    android:background="@drawable/whtp"
     >

    <EditText
        android:id="@+id/txtcd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/txtfpn"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ccd" />

    <TextView
        android:id="@+id/txtsm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/ccdd"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/SpinTypeComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtfpn"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:prompt="@id/SpinTypeComp" />

    <EditText
        android:id="@+id/txtfpn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/txtccpi"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ccp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/SpinTypeComp"
        android:layout_marginTop="42dp"
        android:text="@string/d" />

    <Button
        android:id="@+id/btncsub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/txtsm"
        android:layout_marginBottom="42dp"
        android:text="@string/sb" />

    <EditText
        android:id="@+id/txtccpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/btncsub"
        android:ems="10"
        android:inputType="text"
        android:text="@string/ccpi" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView3"
        android:layout_centerVertical="true"
        android:text="@string/toc" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/txtsm"
        android:layout_marginTop="21dp"
        android:text="@string/cfn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SpinTypeComp"
        android:layout_toLeftOf="@+id/SpinTypeComp"
        android:text="@string/cpn" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtfpn"
        android:layout_alignRight="@+id/textView4"
        android:text="@string/cdate" />

    <EditText
        android:id="@+id/txtcompdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtfpn"
        android:layout_alignLeft="@+id/txtfpn"
        android:layout_alignRight="@+id/txtfpn"
        android:ems="10"
        android:inputType="date" />
    
</RelativeLayout>